v2/data-props/polling.mdx
---
title: Polling
---

import V2UpgradeWarning from "/snippets/v2-upgrade-warning.mdx";

<V2UpgradeWarning />

## Poll helper

Việc poll máy chủ để lấy thông tin mới cho trang hiện tại là nhu cầu phổ biến, vì vậy Inertia cung cấp poll helper nhằm giảm boilerplate code. Ngoài ra, helper sẽ tự động dừng polling khi trang unmount.

Đối số bắt buộc duy nhất là khoảng thời gian polling tính bằng mili giây.

<CodeGroup>

```js Vue icon="vuejs"
import { usePoll } from '@inertiajs/vue3'

usePoll(2000)
```

```jsx React icon="react"
import { usePoll } from '@inertiajs/react'

usePoll(2000)
```

```js Svelte icon="s"
import { usePoll } from '@inertiajs/svelte'

usePoll(2000)
```

</CodeGroup>

Nếu cần truyền thêm request option cho poll helper, bạn có thể truyền bất kỳ option nào của `router.reload` làm tham số thứ hai.

<CodeGroup>

```js Vue icon="vuejs"
import { usePoll } from '@inertiajs/vue3'

usePoll(2000, {
    onStart() {
            console.log('Polling request started')
    },
    onFinish() {
            console.log('Polling request finished')
    }
})
```

```jsx React icon="react"
import { usePoll } from '@inertiajs/react'

usePoll(2000, {
    onStart() {
            console.log('Polling request started')
    },
    onFinish() {
            console.log('Polling request finished')
    }
})
```

```js Svelte icon="s"
import { usePoll } from '@inertiajs/svelte'

usePoll(2000, {
    onStart() {
            console.log('Polling request started')
    },
    onFinish() {
            console.log('Polling request finished')
    }
})
```

</CodeGroup>

Nếu muốn kiểm soát hành vi polling chi tiết hơn, poll helper cung cấp các method `stop` và `start` để bạn chủ động bắt đầu hoặc dừng. Có thể truyền option `autoStart: false` để ngăn helper tự bắt đầu polling khi component mount.

<CodeGroup>

```vue Vue icon="vuejs"
<script setup>
import { usePoll } from '@inertiajs/vue3'

const { start, stop } = usePoll(2000, {}, {
    autoStart: false,
})
</script>

<template>
    <button @click="start">Start polling</button>
    <button @click="stop">Stop polling</button>
</template>
```

```jsx React icon="react"
import { usePoll } from '@inertiajs/react'

export default () => {
    const { start, stop } = usePoll(2000, {}, {
            autoStart: false,
    })

    return (
            <div>
                    <button onClick={start}>Start polling</button>
                    <button onClick={stop}>Stop polling</button>
            </div>
    )
}
```

```js Svelte icon="s"
import { usePoll } from '@inertiajs/svelte'

const { start, stop } = usePoll(2000, {}, {
    autoStart: false,
})
```

</CodeGroup>

## Throttling

Mặc định, poll helper sẽ giảm 90% tần suất request khi tab trình duyệt ở background. Nếu muốn tắt hành vi này, truyền option `keepAlive`.

<CodeGroup>

```js Vue icon="vuejs"
import { usePoll } from '@inertiajs/vue3'

usePoll(2000, {}, {
    keepAlive: true,
})
```

```jsx React icon="react"
import { usePoll } from '@inertiajs/react'

usePoll(2000, {}, {
    keepAlive: true,
})
```

```js Svelte icon="s"
import { usePoll } from '@inertiajs/svelte'

usePoll(2000, {}, {
    keepAlive: true,
})
```

</CodeGroup>

---

## Tài liệu chính thức

Bài dịch này được đối chiếu từ [tài liệu Inertia.js v2 chính thức](https://inertiajs.com/docs/v2/data-props/polling). Nếu có khác biệt do phiên bản hoặc cập nhật mới, hãy ưu tiên tài liệu chính thức làm nguồn tham chiếu.
